# cloud

./: .gcloudignore  .gitignore  Cargo.toml  README.md  appenv  build-and-deploy.sh  deployment.md  gcloud-cron-setup.sh  gcloud-domain-map.sh  get-secrets.sh  oauth_clients.json  oauth_scopes.json  openid-configuration.json  rustfmt.toml
.github/workflows/: integrations.yml
amazon-alexa-ha/: Cargo.toml  README.md
amazon-alexa-ha/src/: display_categories.rs  error.rs  lib.rs  property_types.rs  uom.rs  utils_serde.rs
amazon-alexa-ha/src/controller/: brightness.rs  calendar.rs  camera_stream.rs  channel.rs  color.rs  color_temperature.rs  contact.rs  doorbell.rs  equalizer.rs  event_detection_sensor.rs  input.rs  lock.rs  media_metadata.rs  meeting_client.rs  mod.rs  mode.rs  motion.rs  percentage.rs  power.rs  power_level.rs  range.rs  rtc_session.rs  scene.rs  security_panel.rs
amazon-alexa-ha/src/directive/: mod.rs
amazon-alexa-ha/src/event/: authorization.rs  change_report.rs  discovery.rs  mod.rs  properties.rs
cloud-addon-lib/: Cargo.toml  README.md  appenv
cloud-addon-lib/src/: github.rs  lib.rs
cloud-addon-lib/src/dto/: db.rs  mod.rs
cloud-addon-registry/: Cargo.toml  README.md
cloud-addon-registry/src/: lib.rs  main.rs  responder_type.rs  routes.rs
cloud-addon-registry/tests/: integration.rs
cloud-amazon-alexa-skill/: .gitignore  Cargo.toml  README.md  deploy.sh
cloud-amazon-alexa-skill/lambda/: Cargo.toml
cloud-amazon-alexa-skill/lambda-attributes/src/: lib.rs
cloud-amazon-alexa-skill/lambda/examples/: hello-without-macro.rs
cloud-amazon-alexa-skill/lambda/src/: client.rs  lib.rs
cloud-amazon-alexa-skill/src/: main.rs
cloud-auth/: Cargo.toml  README.md  appenv
cloud-auth-lib/: Cargo.toml  README.md
cloud-auth-lib/src/: credentials.rs  errors.rs  jwt.rs  lib.rs  login.rs  oauth_clients.rs  token.rs
cloud-auth-lib/src/dto/: db.rs  login.rs  mod.rs  oauth.rs  user_info.rs
cloud-auth-lib/src/rocket_helper/: catch_all.rs  error_routes.rs  fairing_cors.rs  guard_ip_addr.rs  guard_oauth_jwt_access.rs  guard_rate_limiter.rs
cloud-auth/src/: lib.rs  main.rs  responder_type.rs  routes.rs
cloud-auth/tests/: integration.rs
cloud-connection-broker/: Cargo.toml  Dockerfile  README.md
cloud-connection-broker-lib/: Cargo.toml  README.md
cloud-connection-broker-lib/src/: lib.rs
cloud-connection-broker/doc/: security.md
cloud-connection-broker/src/: encrypt.rs  error.rs  establish_connection.rs  jwt.rs  main.rs
cloud-subscriptions/: Cargo.toml  README.md  appenv
cloud-subscriptions/src/: lib.rs  main.rs  responder_type.rs  routes.rs
cloud-subscriptions/src/dto/: db.rs
cloud-subscriptions/tests/: integration.rs
cloud-vault/: Cargo.toml  README.md  appenv
cloud-vault/src/: access_scopes.rs  main.rs  responder_type.rs  routes.rs  travis.rs
create-secrets/: Cargo.toml  README.md
create-secrets/src/: main.rs
data/: access_scopes.json  oauth_clients.json  oauth_scopes.json  openid-configuration.json  repositories.json
scripts/: Dockerfile  Dockerfile.local  gcloud-account-setup.sh  gcloud-build-and-deploy.sh  gcloud-cron-setup.sh  gcloud-domain-map.sh
src/: credentials.rs  jwt.rs  lib.rs  main.rs  oauth_clients.rs  responder_type.rs  routes.rs  token.rs  tools.rs
src/dto/: db.rs  mod.rs  oauth.rs
src/rocket_helper/: guard_oauth_jwt_access.rs  guard_rate_limiter.rs  mod.rs
tests/: integration.rs
