[package]
name = "cloud-auth"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
name = "cloud_auth"
path = "src/lib.rs"

[dependencies]
rocket = { version="^0.4", default-features = false }
failure = "^0.1"
serde_json = "^1.0"
serde = "^1.0"
signal-hook = "^0.1"
stackdriver_logger = "^0.5"
log = "^0.4"
chrono = "0.4.9"

firestore-db-and-auth = { version="^0.5", default-features = false, features=["rustls-tls","rocket_support"] }
cloud-vault= { git = "https://github.com/openhab-nodes/cloud-ci-cd", branch="master", features=[] }

biscuit = "^0.3"
redis = "0.12.0"
sha2 = "0.8.0"
base64 = "0.10.1"
ring = "0.16.9"
miniz_oxide = "0.3.2"
bincode = "1.1.4"
url = "2.1.0"
serde_urlencoded = "0.6.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]

[patch.crates-io]
firestore-db-and-auth = {git="https://github.com/davidgraeff/firestore-db-and-auth-rs", branch="master"}

[profile.release]
lto = true
