[package]
name = "cloud-auth"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
name = "cloud_auth"
path = "src/lib.rs"

[dependencies]
serde_json = "^1.0"
serde_urlencoded = "0.6.1"
serde = "^1.0"
signal-hook = "^0.1"
chrono = "0.4.9"

# Error handling and logging
failure = "^0.1"
stackdriver_logger = "^0.5"
log = "^0.4"

# jwt, checksums, encryption, time based passwords
biscuit = "^0.3"
miniz_oxide = "0.3.2" # compression of jwt
ring = "0.16.9"
sha2 = "0.8.0" # checksums
base64 = "0.10.1"
ureq = { version="0.11.2", default-features = false, features=["tls","json"] } # download JWKS
uuid = { version="0.8.1", default-features = false,features=["v4"] } # unique id for jwt based refresh tokens
libreauth = "0.12.0" # totp

# http
rocket = { version="^0.4", default-features = false }
rocket_contrib = { version="^0.4", default-features = false, features=["json"] }
ratelimit_meter = "5.0.0"
nonzero_ext = "0.1.5"
url = "2.1.0"

# databases
firestore-db-and-auth = { version="^0.5", default-features = false, features=["rustls-tls","rocket_support"] }
redis = "0.12.0"

[patch.crates-io]
firestore-db-and-auth = {git="https://github.com/davidgraeff/firestore-db-and-auth-rs", branch="master"}

[profile.release]
lto = true
