cargo-features = ["named-profiles"]

[workspace]
members=["cloud-auth-lib", "cloud-auth", "cloud-vault",
"cloud-subscriptions", "cloud-addon-lib", "cloud-addon-registry", "create-secrets",
"cloud-connection-broker-lib", "cloud-connection-broker",
"cloud-amazon-alexa-skill", "amazon-alexa-ha"]

[profile.release]
lto = true

[profile.lambda]
inherits = "release"
opt-level = "s"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'


[patch.crates-io]
firestore-db-and-auth = {git="https://github.com/davidgraeff/firestore-db-and-auth-rs", branch="master"}
