[package]
name = "amazon-alexa-ha"
version = "0.1.0"
authors = ["David Graeff <david.graeff@web.de>"]
description = "Datatypes for writing an Amazon Alexa Homeautomation Skill"
edition = "2018"

[dependencies]
log = "0.4"
serde = {version="1.0",features=["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = {version="0.8", features=["serde", "v4"]}
base64 = "0.10" # example only
