[package]
name = "cloud-addon-registry"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
failure = "^0.1"
serde_json = "^1.0"
serde = "^1.0"
signal-hook = "^0.1"
stackdriver_logger = "^0.5"
log = "^0.4"
chrono = "^0.4"
base64 = "^0.10"
semver = "^0.9"

cloud-auth-lib = {path="../cloud-auth-lib"}
cloud-addon-lib = {path="../cloud-addon-lib"}

firestore-db-and-auth = { version="^0", default-features = false, features=["rustls-tls","rocket_support"] }

rocket = { version="^0.4", default-features = false }
rocket_contrib = { version="^0.4", default-features = false, features=["json"] }

reqwest = { version ="^0.9", default-features = false, features=["rustls-tls"] }
serde_yaml = "0.8.9"
regex = { version ="1.3.1", default-features = false, features=["std"] }
