[package]
name = "cloud-amazon-alexa-skill"
version = "0.1.0"
authors = ["David Graeff <david.graeff@web.de>"]
edition = "2018"

[dependencies]
simple_logger = "1.3.0"
serde = {version="1.0.101",features=["derive"]}
serde_json = "1.0.41"
serde_derive = "1.0.101"
log = "0.4.8"

tokio = "0.2.0-alpha.4"

chrono = { version = "0.4", features = ["serde"] }
fehler = "1.0.0-alpha.1"

# Until the Rust Runtime for AWS Lambda has merged the async branch
[dependencies.lambda_runtime]
path = "lambda"
package = "lambda"

