[package]
name = "cloud-connection-broker-lib"
version = "0.1.0"
authors = ["David Graeff <david.graeff@web.de>"]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4.8"
serde = { version = "1.0.102", features = ["derive"] }
chrono = "0.4.9"
bytes = "0.4.12"

# Errors
quick-error = "1.2.2"

# Async
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
futures-channel-preview = "=0.3.0-alpha.19"
tokio = "0.2.0-alpha.6"
reqwest = { version = "0.10.0-alpha.1", default-features = false, features = ["json"] }
async-bincode = "0.5.0-alpha.6"

# Encryption / Authentication
biscuit = "0.3"
ring = "0.16"

# Efficiency
arc-swap = "0.4.3"
generational-arena = "0.2.3"
smallvec = "0.6.12"
crossbeam-channel = "0.3.9"
spmc = "0.3.0"

cloud-vault= { git = "https://github.com/openhab-nodes/cloud-ci-cd", branch="master", features=[] }
