[package]
name = "cloud-subscription"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
failure = "^0.1"
serde_json = "^1.0"
serde = "^1.0"
signal-hook = "^0.1"
stackdriver_logger = "^0.5"
log = "^0.4"
chrono = "^0.4"

firestore-db-and-auth = { version="^0.5", default-features = false, features=["rustls-tls","rocket_support"] }
rocket = { version="^0.4", default-features = false }
rocket_contrib = { version="^0.4", default-features = false, features=["json"] }
cloud-auth-lib = {path="../cloud-auth-lib"}

#reqwest = { version ="^0.9", default-features = false, features=["rustls-tls"] }
braintreepayment_graphql = { version ="^0.1", default-features = false, features=["rustls-tls"] }
