[package]
name = "create-secrets"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
serde_json = "^1.0"
serde = "^1.0"
failure = "^0.1"
log = "^0.4"
rcgen = "0.7.0"
simple_logger = "1.3.0"
ring = "0.16.9"
ureq = { version="0.11.2", default-features = false, features=["tls"] } # download JWKS

cloud-auth-lib = {path="../cloud-auth-lib"}
base64 = "0.11.0"
